Generalised BDXL locator by parameterising NAPTR service name to use